// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourvicStoryshots Bar Chart Default 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-bar-chart"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Bar Chart Dual Data 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-bar-chart"
  >
    <div
      aria-label="Bar Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="horizontalbar-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Bar Chart Invalid data provided 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-bar-chart"
  >
    <!---->
     
    <div
      class="yourvic-error yourvic-error--chart"
    >
      <span
        class="yourvic-error-span"
      >
        DataError: No datasets provided. The data object needs to have a "datasets" property
      </span>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Bar Chart Ripple Grid 1`] = `
<div
  class="rpl-container"
  style="width: 100%;"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--10"
    >
      <div
        style="width: 100%; height: 100vh;"
      >
        <div
          class="yourvic-bar-chart"
        >
          <div
            aria-label="Bar Chart"
            class=""
            dataformat="normal"
            role="img"
            style="position: relative; height: inherit; width: inherit; outline: none;"
            tabindex="0"
          >
            <canvas
              class="chartjs-render-monitor"
              height="0"
              id="horizontalbar-chart"
              style="display: block;"
              width="0"
            />
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Bar Chart Vertical 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-bar-chart"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Bar Chart With title and legend 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-bar-chart"
  >
    <div
      aria-label="Bar Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="horizontalbar-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Error Chart-related error 1`] = `
<div
  style="height: 200px;"
>
  <div
    class="yourvic-error yourvic-error--chart"
  >
    <span
      class="yourvic-error-span"
    >
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`YourvicStoryshots Error Default 1`] = `
<div
  style="height: 200px;"
>
  <div
    class="yourvic-error yourvic-error--null"
  >
    <span
      class="yourvic-error-span"
    >
      Something went wrong
    </span>
  </div>
</div>
`;

exports[`YourvicStoryshots Line Chart Default 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-line-chart"
  >
    <div
      aria-label="Line Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="line-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Line Chart Invalid data provided 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-line-chart"
  >
    <!---->
     
    <div
      class="yourvic-error yourvic-error--chart"
    >
      <span
        class="yourvic-error-span"
      >
        DataError: No datasets provided. The data object needs to have a "datasets" property
      </span>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Line Chart Multiple Datasets 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-line-chart"
  >
    <div
      aria-label="Line Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="line-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Line Chart Ripple Grid 1`] = `
<div
  class="rpl-container"
  style="width: 100%;"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--10"
    >
      <div
        style="width: 100%; height: 100vh;"
      >
        <div
          class="yourvic-line-chart"
        >
          <div
            aria-label="Line Chart"
            class=""
            dataformat="normal"
            role="img"
            style="position: relative; height: inherit; width: inherit; outline: none;"
            tabindex="0"
          >
            <canvas
              class="chartjs-render-monitor"
              height="0"
              id="line-chart"
              style="display: block;"
              width="0"
            />
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Line Chart With title and legend 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-line-chart"
  >
    <div
      aria-label="Line Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="line-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Core Fixed Map 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; margin: 20px; width: 400px; height: 300px; border: 1px solid black;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Core Interactive Map 1`] = `
<div
  class="yourvic-map-core"
  style="width: 100%; height: 100%;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
       
      <a
        class="map-watermark"
        href="http://mapbox.com/about/maps"
        target="_blank"
      >
        Mapbox
      </a>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Core Ripple Grid 1`] = `
<div
  class="rpl-container"
  style="width: 100%;"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-col rpl-col--2"
    >
      Column 1 
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--8"
    >
      <div
        class="yourvic-map-core"
        style="position: relative; width: 100%; padding-top: 56.25%; border: 1px solid black;"
      >
         
        <div
          class="yourvic-map-core__container"
        >
          <div
            aria-label="Map"
            class="yourvic-map-core__map"
            id="map"
            role="application"
            tabindex="0"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--2"
    >
      Column 3 
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Family Violence Map with family violence data 1`] = `
<div
  class="yourvic-pofvmap"
>
  <h2
    class="yourvic-pofvmap__title"
  >
    Title
  </h2>
   
  <div
    class="rpl-markup tide-wysiwyg app-wysiwyg"
  >
    <div
      class="rpl-markup__inner"
    >
      Description
    </div>
  </div>
   
  <p
    class="rpl-visually-hidden"
  >
    The following is an interactive map component, showing the location of programs being run in support of the Prevention of Family Violence initiative.
  </p>
   
  <div
    class="yourvic-pofvmap__control"
  >
    <div
      class="yourvic-pofvmap__map-container"
    >
      <button
        class="rpl-button full-screen-btn rpl-button--primary"
      >
        <span>
          <span
            class="rpl-text-icon__group"
          >
            <!---->
            Enter
          </span>
           
          <span>
             full screen
          </span>
        </span>
      </button>
       
      <div
        class="yourvic-pofvmap__control__expand-btn-container"
      >
        <button
          class="rpl-button expand-btn rpl-button--primary"
        >
          <!---->
        </button>
      </div>
       
      <div
        class="yourvic-map-core"
        style="position: relative; width: 100%; height: 100%;"
      >
         
        <div
          class="yourvic-map-core__container"
        >
          <div
            aria-label="Map"
            class="yourvic-map-core__map"
            id="map"
            role="application"
            tabindex="0"
          >
             
            <a
              class="map-watermark"
              href="http://mapbox.com/about/maps"
              target="_blank"
            >
              Mapbox
            </a>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="yourvic-pofvmap__sidebar-container"
    >
      <div
        class="yourvic-map-sidebar-home"
      >
        <div
          class="yourvic-map-sidebar-header"
        >
          <div
            class="yourvic-map-sidebar-header__ribbon"
          />
           
          <div
            class="yourvic-map-sidebar-header__content"
          >
            <!---->
             
            <h1>
              0 family violence prevention projects across Victoria
            </h1>
             
            <p>
              
            </p>
             
            <a
              class="yourvic-map-sidebar-header__btn"
            >
              <span
                class="rpl-text-label rpl-text-label--dark rpl-text-label--dark--underline rpl-text-label--small rpl-text-label--small--underline"
                iconcolor="primary"
              >
                View all projects
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="yourvic-map-sidebar-home__content"
        >
          <!---->
           
          <div>
            <div>
              <div
                class="yourvic-map-categories-page__menu"
              >
                <span
                  class="rpl-text-label yourvic-map-categories-page__header-btn rpl-text-label--small rpl-text-label--emphasis"
                >
                  
      Browse by category
    
                </span>
                 
                <a
                  class="yourvic-map-categories-page__other-btn"
                >
                  <span
                    class="rpl-text-label rpl-text-label--small rpl-text-label--small--underline rpl-text-label--emphasis"
                    iconcolor="primary"
                  >
                    
      Browse by area
      
                  </span>
                </a>
              </div>
               
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Aboriginal
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Arts
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Bystander
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Children and young people
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Culturally and linguistically diverse
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Disability focus
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Education
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Health, family and community services
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Higher education
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      LGBTIQ
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Media
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Parents
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Public spaces, infrastructure and facilities
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Research or action research
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Seniors
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Sports and recreation
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Technology and online
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Workforce
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
              <a>
                <div
                  class="yourvic-map-card"
                >
                  <div
                    class="yourvic-map-card__header"
                  >
                    <!---->
                     
                    <span
                      class="yourvic-map-card__title"
                    >
                      Workplace cultural change
                    </span>
                     
                    <div
                      class="yourvic-map-card__arrow"
                    >
                      <!---->
                    </div>
                  </div>
                   
                </div>
              </a>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Fire Map with fire data 1`] = `
<div
  class="fire-map"
>
  <div
    class="yourvic-map-core"
    style="position: relative; width: 100%; padding-top: 56.25%;"
  >
     
    <div
      class="yourvic-map-core__container"
    >
      <div
        aria-label="Map"
        class="yourvic-map-core__map"
        id="map"
        role="application"
        tabindex="0"
      >
         
        <a
          class="map-watermark"
          href="http://mapbox.com/about/maps"
          target="_blank"
        >
          Mapbox
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Free Wifi Map with free wifi data 1`] = `
<div
  class="yourvic-map"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <p
    class="rpl-visually-hidden"
  >
    
    The following is an interactive map component, showing free WiFi access points across Victoria - in Melbourne CBD, Ballarat, and Bendigo. The CBD has access points along major roads and in train stations, Bendigo in its town centre and Ballarat in the town centre and surrounding Lake Wendouree.
  
  </p>
   
  <div
    class="yourvic-map-tablist"
    role="tablist"
  >
    <div
      class="yourvic-map-tablist__inner"
    >
      <div
        class="yourvic-map-tablist__title"
      >
        <strong>
          #VicFreeWiFi
        </strong>
         Coverage Map
      </div>
       
      <div
        class="yourvic-map-tablist__list"
      >
        <button
          aria-selected="true"
          class="yourvic-map-tablist__item yourvic-map-tablist__item--active"
          role="tab"
        >
          
        Melbourne
      
        </button>
        <button
          aria-selected="false"
          class="yourvic-map-tablist__item"
          role="tab"
        >
          
        Ballarat
      
        </button>
        <button
          aria-selected="false"
          class="yourvic-map-tablist__item"
          role="tab"
        >
          
        Bendigo
      
        </button>
      </div>
    </div>
  </div>
   
  <div
    class="yourvic-map-core"
    role="tabpanel"
    style="position: relative; width: 100%; padding-top: 56.25%;"
  >
     
    <div
      class="yourvic-map-core__container"
    >
      <div
        aria-label="Map"
        class="yourvic-map-core__map"
        id="map"
        role="application"
        tabindex="0"
      >
         
        <a
          class="map-watermark"
          href="http://mapbox.com/about/maps"
          target="_blank"
        >
          Mapbox
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer ArcGIS - MapShare 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer Configurable Layer 1`] = `
<div
  class="yourvic-map-core"
  style="width: 100%; height: 100%;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer Multiple Layers 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer Open Street Map 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer WMS - GDA94 Projection 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer WMS - MyVictoria 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer WMS - VicMap Aerial + Overlay 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer WMS - VicMap Basemap 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Tile Layer XYZ - Mapbox 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <a
        class="map-watermark"
        href="http://mapbox.com/about/maps"
        target="_blank"
      >
        Mapbox
      </a>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer ArcGIS Feature Server 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer Configurable Layer 1`] = `
<div
  class="yourvic-map-core"
  style="width: 100%; height: 100%;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer Custom Styles 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer GeoJSON File 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer WFS BBOX Load Strategy 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer WFS Tile Load Strategy 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Layer WFS with Filter 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Tile Layer Configurable Layer 1`] = `
<div
  class="yourvic-map-core"
  style="width: 100%; height: 100%;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Tile Layer Mapbox Bright 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <a
        class="map-watermark"
        href="http://mapbox.com/about/maps"
        target="_blank"
      >
        Mapbox
      </a>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Tile Layer MyVictoria WMS 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Maps/Vector Tile Layer MyVictoria WMTS 1`] = `
<div
  class="yourvic-map-core"
  style="position: relative; width: 100%; height: 100vh;"
>
   
  <div
    class="yourvic-map-core__container"
  >
    <div
      aria-label="Map"
      class="yourvic-map-core__map"
      id="map"
      role="application"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Pie Chart Default 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-pie-chart"
  >
    <div
      aria-label="Pie Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="pie-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Pie Chart Invalid data provided 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-pie-chart"
  >
    <!---->
     
    <div
      class="yourvic-error yourvic-error--chart"
    >
      <span
        class="yourvic-error-span"
      >
        DataError: No datasets provided. The data object needs to have a "datasets" property
      </span>
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Pie Chart Multiple Datasets 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-pie-chart"
  >
    <div
      aria-label="Pie Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="pie-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Pie Chart Ripple Grid 1`] = `
<div
  class="rpl-container"
  style="width: 100%;"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--10"
    >
      <div
        style="width: 100%; height: 100vh;"
      >
        <div
          class="yourvic-pie-chart"
        >
          <div
            aria-label="Pie Chart"
            class=""
            dataformat="normal"
            role="img"
            style="position: relative; height: inherit; width: inherit; outline: none;"
            tabindex="0"
          >
            <canvas
              class="chartjs-render-monitor"
              height="0"
              id="pie-chart"
              style="display: block;"
              width="0"
            />
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Pie Chart With title and legend 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    class="yourvic-pie-chart"
  >
    <div
      aria-label="Pie Chart"
      class=""
      dataformat="normal"
      role="img"
      style="position: relative; height: inherit; width: inherit; outline: none;"
      tabindex="0"
    >
      <canvas
        class="chartjs-render-monitor"
        height="0"
        id="pie-chart"
        style="display: block;"
        width="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Tree Map Default 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    arialabel="chart"
    class="yourvic-chart-wrapper yourvic-treemap-chart"
  >
    <div
      class="yourvic-treemap-chart"
    >
      <canvas
        aria-label="Tree Map Chart"
        class="yourvic-treemap-chart-canvas"
        id="0"
        role="img"
        style="outline: none;"
        tabindex="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Tree Map Invalid data provided 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    arialabel="chart"
    class="yourvic-chart-wrapper yourvic-treemap-chart"
  >
    <div
      class="yourvic-treemap-chart"
    >
      <canvas
        aria-label="Tree Map Chart"
        class="yourvic-treemap-chart-canvas"
        id="0"
        role="img"
        style="outline: none;"
        tabindex="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`YourvicStoryshots Tree Map Ripple Grid 1`] = `
<div
  class="rpl-container"
  style="width: 100%;"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--10"
    >
      <div
        style="width: 100%; height: 100vh;"
      >
        <div
          arialabel="chart"
          class="yourvic-chart-wrapper yourvic-treemap-chart"
        >
          <div
            class="yourvic-treemap-chart"
          >
            <canvas
              aria-label="Tree Map Chart"
              class="yourvic-treemap-chart-canvas"
              id="0"
              role="img"
              style="outline: none;"
              tabindex="0"
            />
          </div>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="rpl-col rpl-col--1"
    >
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`YourvicStoryshots Tree Map With title 1`] = `
<div
  style="width: 400px; height: 400px;"
>
  <div
    arialabel="chart"
    class="yourvic-chart-wrapper yourvic-treemap-chart"
  >
    <div
      class="yourvic-treemap-chart"
    >
      <canvas
        aria-label="Tree Map Chart"
        class="yourvic-treemap-chart-canvas"
        id="0"
        role="img"
        style="outline: none;"
        tabindex="0"
      />
    </div>
     
    <!---->
  </div>
</div>
`;
